# cmake-abicc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  project.config
cmake/: FindABIComplianceChecker.cmake  cmake-abicc-config.cmake.in  cmake-abicc.cmake  descriptor.cmake  descriptor.xml.in
contrib/yocto/: cmake-abicc_git.bb
debian/: changelog  control  rules
